--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,4 +194,5 @@
     <string name="backpack_btn_add">"Knop voeg toe "</string>
     <string name="save_detail_maxChar">"Bestandsnaam max 30 karakters"</string>
     <string name="save_detail_emptyString">"Gelieve een bestandsnaam in te geven"</string>
+    <string name="save_detail_uniqueName">"Deze bestandsnaam bestaat al"</string>
 </resources>
