--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,4 +197,5 @@
     <string name="save_detail_uniqueName">"Deze bestandsnaam bestaat al"</string>
     <string name="delete_detail_success">Succesvol verwijderd!</string>
     <string name="error_delete_detail_failure">Er ging iets fout bij het verwijderen.</string>
+    <string name="confirmation_delete_detail">Bent u zeker dat u dit bestand wilt verwijderen?</string>
 </resources>
