--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,5 +244,8 @@
     <string name="search_hint_film">zoek hier een film op naam</string>
     <string name="search_hint_bestand">zoek hier een bestand op naam</string>
     <string name="unauthorized_file_type">Dit bestandstype is niet toegelaten.</string>
+    <string name="btn_create_video">Maak video</string>
+    <string name="je_filmpje_opslaan">Je filmpje opslaan</string>
+    <string name="save_video_title">Titel</string>
 
 </resources>
