--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,7 +218,7 @@
     <string name="wat_zoek_je">wat zoek je?</string>
     <string name="potlood">potlood</string>
     <string name="daterange">selecteer een datumbereik</string>
-    <string name="library_verwijder_event_message">Ben je zeker? Ook alle bijhorende tekeningen, foto\'s,... worden verwijderd</string>
+    <string name="library_verwijder_event_message">Ben je zeker? Ook alle bijhorende tekeningen, foto\'s,… worden verwijderd</string>
     <string name="library_verwijder_event_title">Wil je dit event verwijderen?</string>
     <string name="delete">verwijder</string>
     <string name="recordaudio_record_description">Druk op de rode bol om\neen geluidsfragment op te nemen!</string>
@@ -227,11 +227,11 @@
     <string name="recordaudio_pause">Fragment pauzeren</string>
     <string name="recordaudio_stop">Opname stoppen</string>
     <string name="avatar_nog_niet_ingekleurd">Avatar is nog niet ingekleurd. Klik op potlood om avatar in te kleuren</string>
-    <string name="search">Zoeken...</string>
+    <string name="search">Zoeken…</string>
     <string name="save_video">Save je video</string>
     <string name="youtube_snippet_thumbnail">Youtube video thumbnail</string>
     <string name="search_btn">ZOEKEN</string>
-    <string name="search_youtube">Zoek een filmpje op YouTube...</string>
+    <string name="search_youtube">Zoek een filmpje op YouTube…</string>
     <string name="dialog_to_the_backpack">\"Wil je teruggaan naar je rugzak?</string>
     <string name="save_success">Succesvol opgeslagen.</string>
     <string name="error_ophalen_textdetail">Er ging iets fout bij het ophalen van de tekst</string>
