--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,5 +248,6 @@
     <string name="je_filmpje_opslaan">Je filmpje opslaan</string>
     <string name="save_video_title">Titel</string>
     <string name="error_load_detail_failed">Laden detail faalt</string>
+    <string name="error_load_backpack">Er ging iets fout bij het laden van je rugzak.</string>
 
 </resources>
