feat: load backpack and cinema details
still needs cleanup on following points:
* generic getContainerData use case
* make the subscriber a paramater for use cases by default, or find a
way to not have to mention the IO-scheduler for the calls to network.
* Show loading icon when loading a detail container

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,5 +256,6 @@
     <string name="save_video_title">Titel</string>
     <string name="error_load_detail_failed">Laden detail faalt</string>
     <string name="error_load_backpack">Er ging iets fout bij het laden van je rugzak.</string>
+    <string name="error_load_cinema">Er ging iets fout bij het laden van je cinema.</string>
 
 </resources>
