--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,4 +258,5 @@
     <string name="error_load_backpack">Er ging iets fout bij het laden van je rugzak.</string>
     <string name="error_load_cinema">Er ging iets fout bij het laden van je cinema.</string>
     <string name="selected_detail_error">Dit bestand kan niet meer toegevoegd worden. Je filmpje duurt te lang</string>
+    <string name="dialog_wil_je_teruggaan">Wil je teruggaan?</string>
 </resources>
