--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,4 +261,5 @@
     <string name="button_open_add_menu">knop open toevoeg menu</string>
     <string name="delete_event">Verwijder opgeslagen event</string>
     <string name="delete">Verwijder</string>
+    <string name="button_add_skyscraper">Voeg wolkenkrabber toe</string>
 </resources>
