Refactoring Cinema - Backpack DetailsFactory : factory voor creatie van de detailsfragmenten en SaveDetailsContainerDetailDialog
DetailViewModel :
- extra property getDetailMetaData : wordt getriggerd als de gebruiker het detail heeft aangemaakt, maar nu nog de extra metadata dient op te geven (titel,...)
- extra methode : saveDetailsMetaData : de gebruiker heeft via een dialog de data ingegeven en deze wordt terug doorgegeven aan ViewModel
Deze prop/meth werd in alle detail viewmodels geimplementeerd.
TODO : correcte implementatie in Youtube en ExternalFileViewModel

DetailFragment : erft nu ook van SaveDetailsMetaDataDialogListener. Deze interface bevat een methode die zal worden aangeroepen als de details door de gebruiker zijn ingevuld.
Alle CreateDetailFragmenten implementeren dit nu en zullen de ingevulde metadata doorgeven aan het bijhorend viewmodel, die dan het detail zal aanpassen en dit op de LiveData savedDetail zal plaatsen.
Alle CreateDetailFragmenten luisteren nu ook naar getDetailMetaData, en zullen dan afhankelijk van de activity Event, Cinema, Backpack de bijhorende SaveDetailsContainerDetailDialog oproepen
TODO : correcte implementatie in Youtube en ExternalFile

SaveDetailsContainerDetailDialog : abstracte klasse, erft van DialogFragment,
De gebruiker kan hier de details meta data ingeven en dit roept de SaveDetailsMetaDataDialogListener aan
Heeft ook een bijhorend viewmodel DetailsMetaDataViewModel
SaveCinemaDetailDialog en SaveBackpackDetailDialog erven hiervan, maar hebben hun eigen layoutfile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,6 +252,8 @@
     <string name="je_filmpje_opslaan">Je filmpje opslaan</string>
     <string name="je_tekening_opslaan">Je tekening opslaan</string>
     <string name="je_foto_opslaan">Je foto opslaan</string>
+    <string name="je_tekst_opslaan">Je tekst opslaan</string>
+    <string name="je_audio_opslaan">Je geluidsfragment opslaan</string>
     <string name="je_extern_bestand_opslaan">Je extern bestand opslaan</string>
     <string name="save_video_title">Titel</string>
     <string name="error_load_detail_failed">Laden detail faalt</string>
