--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,4 +262,5 @@
     <string name="delete_event">Verwijder opgeslagen event</string>
     <string name="delete">Verwijder</string>
     <string name="button_add_skyscraper">Voeg wolkenkrabber toe</string>
+    <string name="lbl_activity_skyscraper">De wolkenkrabber</string>
 </resources>
