--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,10 +247,10 @@
     <string name="search_hint_bestand">zoek hier een bestand op naam</string>
     <string name="unauthorized_file_type">Dit bestandstype is niet toegelaten.</string>
     <string name="btn_create_video">Maak video</string>
-    <string name="je_filmpje_opslaan">Je filmpje opslaan</string>
     <string name="je_tekening_opslaan">Je tekening opslaan</string>
     <string name="je_foto_opslaan">Je foto opslaan</string>
     <string name="je_tekst_opslaan">Je tekst opslaan</string>
+    <string name="je_film_opslaan">Je film opslaan</string>
     <string name="je_audio_opslaan">Je geluidsfragment opslaan</string>
     <string name="je_extern_bestand_opslaan">Je extern bestand opslaan</string>
     <string name="save_video_title">Titel</string>
