--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,4 +263,5 @@
     <string name="delete">Verwijder</string>
     <string name="button_add_skyscraper">Voeg wolkenkrabber toe</string>
     <string name="lbl_activity_skyscraper">De wolkenkrabber</string>
+    <string name="rv_btn_delete_skyscraper">Verwijder wolkenkrabber</string>
 </resources>
