--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -281,4 +281,5 @@
     <string name="error_skyscraper_load_goals_failed">Er ging iets fout bij het laden van je doelen.</string>
     <string name="error_skyscraper_change_description_failed">Er ging iets fout bij het aanpassen van beschrijving van je doel.</string>
     <string name="error_skyscraper_update_goal_failed">aanpassen van doel is mislukt</string>
+    <string name="lift">lift</string>
 </resources>
