--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,4 +283,5 @@
     <string name="error_skyscraper_max_number_of_goals_reached">Je kan maximum 5 actieve doelen hebben!</string>
     <string name="error_skyscraper_update_goal_failed">aanpassen van doel is mislukt</string>
     <string name="lift">lift</string>
+    <string name="subdoel_naam_verplicht">Geef eerst de naam in van het subdoel</string>
 </resources>
