--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -281,4 +281,5 @@
     <string name="error_skyscraper_load_goals_failed">Er ging iets fout bij het laden van je doelen.</string>
     <string name="error_skyscraper_change_description_failed">Er ging iets fout bij het aanpassen van beschrijving van je doel.</string>
     <string name="error_skyscraper_max_number_of_goals_reached">Je kan maximum 5 actieve doelen hebben!</string>
+    <string name="error_cinema_no_sources_selected">Je moet nog beelden selecteren voor je filmpje!</string>
 </resources>
