--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,7 +189,7 @@
     <string name="in_de_prullenmand">in de prullenmand</string>
     <string name="bestand_toevoegen">Bestand\ntoevoegen</string>
     <string name="foto_nemen">Foto\nnemen</string>
-    <string name="add_video">Filmen</string>
+    <string name="add_video">Youtube</string>
     <string name="title_backpack">Backpack</string>
     <string name="add_detail_menu_backpack">Detail toevoegen aan rugzak</string>
     <string name="add_detail_menu_treasurechest">Detail toevoegen aan schatkist</string>
