--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -293,4 +293,5 @@
     <string name="error_cinema_no_sources_selected">Je moet nog beelden selecteren voor je filmpje!</string>
     <string name="voeg_actie_toe">voeg actie toe</string>
     <string name="subdoel_opslaan">subdoel opslaan</string>
+    <string name="feedback">Feedback</string>
 </resources>
