--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -295,4 +295,5 @@
     <string name="subdoel_opslaan">subdoel opslaan</string>
     <string name="feedback_kid">Feedback kind</string>
     <string name="feedback_mentor">Feedback begeleider</string>
+    <string name="report_bug">Fout rapporteren</string>
 </resources>
