--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,5 +297,5 @@
     <string name="feedback_mentor">Feedback begeleider</string>
     <string name="report_bug">Fout rapporteren</string>
     <string name="dialog_fragment_skyscraper_title">Wil je teruggaan naar het overzicht?</string>
-    <string name="dialog_fragment_skyscraper_message">Ben je zeker? Je wijzigingen zijn nog niet opgeslagen!</string>
+    <string name="dialog_fragment_skyscraper_message">Ben je zeker? Je doel is nog niet opgeslaan.</string>
 </resources>
